Code smell tests