@@ -6,7 +6,6 @@ import co.edu.uco.ucobet.generales.application.usecase.city.GetCities;
 import co.edu.uco.ucobet.generales.domain.city.CityDomain;
 import org.springframework.stereotype.Service;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class GetCitiesImpl implements GetCities {
@@ -21,6 +20,6 @@ public class GetCitiesImpl implements GetCities {
     public List<CityDomain> execute(Void domain) {
         return cityRepository.findAll().stream()
                 .map(CityEntityMapper.INSTANCE::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
